	Fixed timeshift audio sync problem with tsMuxeR (thanks ExSport!)
	Added option to disable/enable DTS passthrough in video settings folder
	Updated Samsung AllShare configuration to recognize newest firmware
	Added support for WDHD Live and AirAv app (thanks, ehM.Deee!)
	Migrated PMS source to GitHub (https://github.com/ps3mediaserver/ps3mediaserver)
	Added commit information

2011-11-20 - 1.50.0

	Backwards-incompatible API changes (for plugin developers/packagers) - see http://tinyurl.com/3qtgk5k for more details
	Updated binaries build script to include Linux support (thanks, happy.neko!)
	Updated OS X MPlayer to include fontconfig support
	Language updates:
		Updated Bulgarian translation (thanks, JORDITO!)
		Updated German translation (thanks, smo!)
		Updated Dutch translation
		Clarified English language labels
		Speeds displayed in Mb/s instead of Kb/s
	Added full featured IP filter with support for wildcards and ranges
	Improved network interface choosing algorithm now skips virtual interfaces
	Updated libraries (configuration, jgoodies and slf4j)
	Detect file system changes runtime (adding/removing folders/files).
	Updated JRE auto-download from 6u27 to 7u1
	Added option to create a desktop shortcut to the Windows installer
	Renderer image improvements
	Improvements to tab layouts
	Maximum bandwidth setting works
	Limit bandwidth to 110Mb/s by default which should solve a lot of "stuttering playback" reports
	Recognise forced subtitles (thanks, ExSport!)
	Updated MPlayer and MEncoder on Windows and OSX from Sherpya's old builds to SubJunk's new builds which fixes many playback issues, colour-conversion bugs and more (but possibly has drawbacks for some files, too)
	Main (Status) tab displays a large tick when it's connected to a renderer instead of a PS3 or warning image
	Updated MediaInfo to 0.7.51 from 0.7.47
	New natural sort option for file order: Alphanumeric (e.g. Season 2 before Season 10)
	Always allow "Restart Server" button (#1186)