@@ -223,6 +223,13 @@ ChunkedTransfer = false
 # settings will be used.
 CustomMencoderQualitySettings =
 
+# SubtitleHttpHeader: Some devices recognize a custom HTTP header for
+# retrieving the contents of a subtitles file. Set this option to the name of
+# that custom header and PMS will send the URL for the subtitles file in that
+# header (e.g. Samsung devices recognize the "CaptionInfo.sec" header).
+# Default value is "", which means PMS will not send such header information.
+SubtitleHttpHeader =
+
 #-----------------------------------------------------------------------------
 # IMAGES
 #
