@@ -43,3 +43,4 @@ MaxVideoHeight=0
 MimeTypesChanges=audio/wav=audio/L16|video/x-matroska=video/avi|video/x-flv=video/mp4|audio/mp3=audio/L16|video/mp4=video/mpeg
 TranscodeExtensions=flv,wav
 StreamExtensions=mkv,mp3,mp4,avi,mov
+SubtitleHttpHeader=CaptionInfo.sec
