@@ -20,6 +20,7 @@ Changelog:
 	Added support for WDHD Live and AirAv app (thanks, ehM.Deee!)
 	Migrated PMS source to GitHub (https://github.com/ps3mediaserver/ps3mediaserver)
 	Added commit information
+	Added subtitle HTTP header support for SamsungAllShare (thanks, SamiMakinen!)
 
 2011-11-20 - 1.50.0
 
